--- a/server/public/index.html
+++ b/server/public/index.html
@@ -57,6 +57,23 @@
 }
 .float-counter:hover{ background:#161616; }
 .seg.playing { outline:2px solid #2b8a3e; box-shadow:0 0 0 2px #2b8a3e66 inset; }
+/* compact segment header */
+#segments .seg header{
+  display:grid;
+  grid-template-columns: auto auto 1fr auto auto auto;
+  grid-auto-flow: row dense;
+  gap:8px;
+  align-items:center;
+}
+#segments .seg header .cluster{display:inline-flex; gap:6px; align-items:center}
+#segments .seg header .cluster.media .btn{min-width:34px}
+#segments .seg .time-badge{font:12px/1.2 ui-monospace, SFMono-Regular, Menlo, monospace; opacity:.7}
+#segments .seg .pill{background:#222; border:1px solid #444; padding:2px 6px; border-radius:12px; margin-left:4px}
+#segments .seg .address select{min-width:165px}
+#segments .seg.no-speaker .pill{background:#132033; border-color:#274567}
+@media (max-width:1000px){
+  #segments .seg header{grid-template-columns: 1fr 1fr;}
+}
 
   </style>
 </head>
@@ -77,6 +94,8 @@
           <button class="btn" id="btnImportText">Import Pasted Text</button>
           <label class="btn" for="file">Upload SRT/VTT/TXT</label>
           <input type="file" id="file" style="display:none"/>
+          <label class="btn" for="audioFile">Upload Audio</label>
+          <input type="file" id="audioFile" accept="audio/*" style="display:none"/>
         </div>
       </div>
 <div class="row" style="margin-top:8px; gap:8px; align-items:center;">
@@ -91,7 +110,9 @@
     <option value="">— Choose transcript —</option>
   </select>
   <button class="btn" id="cleanSelected">Clean selected</button>
-  <button class="btn" id="deleteSelected" style="border-color:#5a1a1a;">Delete selected</button>
+   <button class="btn" id="deleteSelected" title="Delete the currently chosen transcript">
+   Delete this transcript
+</button
 </div>
 
 
@@ -107,7 +128,7 @@
     <strong>Segments</strong>
     <span class="muted" id="segCount"></span>
   </div>
-  <div id="paintbar" class="pill" style="display:flex;gap:.5rem;align-items:center;">
+  <!--div id="paintbar" class="pill" style="display:flex;gap:.5rem;align-items:center;">
   <label>Paint speaker:</label>
   <select id="paintSpeaker"></select>
   <button id="paintClear" type="button" class="btn">Clear</button>
@@ -116,8 +137,8 @@
 <div id="addressTools" class="pill" style="display:flex;gap:.5rem;align-items:center;">
   <label>Addressed to:</label>
   <select id="addressWho"></select>
-  <button id="addressApply" type="button" class="btn">Rewrite “you” → name (selected range)</button>
-</div>
+  
+</div-->
   <div class="row" style="gap:6px;">
     <input id="markPattern" placeholder="Mark text (e.g., OOC:, [rules])"/>
 <button class="btn" id="markMatches">Mark matches</button>
@@ -133,7 +154,9 @@
   <input type="checkbox" id="selectAll"/>
   Select all (page)
 </label>
-<button class="btn" id="bulkDelete" style="border-color:#5a1a1a;">Delete selected</button>
+<button class="btn danger" id="bulkDelete" title="Delete checked segments on this page">
+   Delete selected segments
+ </button>
 
     <select id="pageSize">
       <option>100</option><option selected>200</option><option>500</option><option>1000</option>
