feat: add new speaker input and button, enhance speaker management with localStorage support

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -211,6 +211,12 @@
 
     <input id="search" placeholder="Search…" />
     <select id="speakerFilter"><option value="">All speakers</option></select>
+    <input id="newSpeakerName" placeholder="Add NPC..." style="width:120px;" title="Add a new speaker (e.g., Barkeep, Guard, etc.)" />
+    <button class="btn" id="addSpeaker" title="Add this speaker to the list">+</button>
+    <label class="pill" style="display:flex;align-items:center;gap:6px;">
+      <input type="checkbox" id="groupView" />
+      Group view
+    </label>
     <!-- add inside the top Segments toolbar row -->
 <label class="pill" style="display:flex;align-items:center;gap:6px;">
   <input type="checkbox" id="selectAll"/>
